# star-it-all

./: Cargo.toml  README.md
src/: cli.rs  json.rs  main.rs
