[package]
name = "star-it-all"
description = "A utility to star every repo from a user"
version = "0.1.0"
edition = "2018"
authors = ["William Lane <williamlane923@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.40"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["full"] }
clap = "3.0.0-beta.2"
futures = "0.3.14"
